# DeepLab-Context

./: .gitignore  LICENSE  Makefile  Makefile.config  README.md  image_fixer.m  list.txt  run.py  run_densecrf.sh  run_densecrf_grid_search.sh  run_pascal.py  run_pascal.sh  text-editor.py  train_maker.py  val_maker.py  weight_checker.py  weight_manupilator.py
config/DeepLab/: solver.prototxt  solver2.prototxt  test.prototxt  train.prototxt
config/DeepLab-COCO-LargeFOV/: solver.prototxt
config/DeepLab-LargeFOV/: solver.prototxt  solver2 (1).prototxt  test.prototxt  train (1).prototxt
config/DeepLab-MSc/: solver2.prototxt  test.prototxt  train.prototxt
config/DeepLab-MSc-COCO-LargeFOV/: solver.prototxt  test.prototxt  train.prototxt
config/DeepLab-MSc-LargeFOV/: solver2.prototxt  test.prototxt
config/DeepLab-Weak-EM-Adapt/: solver.prototxt  solver2.prototxt  train.prototxt
densecrf/: Makefile  README.md  README.txt
densecrf/libDenseCRF/: permutohedral.h
densecrf/my_script/: DownSampleFeature.m  (+5 more)
densecrf_icml/: CMakeLists.txt  my_Makefile
densecrf_icml/examples/: CMakeLists.txt  common.cpp  common.h  dense_inference.cpp  dense_learning.cpp  densecrf_learning.cpp  ppm.cpp  ppm.h  test_optimization.cpp  test_pairwise.cpp  test_permutohedral.cpp  util.cpp  util.h
densecrf_icml/include/: densecrf.h  optimization.h  pairwise.h  permutohedral.h
densecrf_icml/src/: densecrf.cpp  labelcompatibility.cpp  objective.cpp  optimization.cpp  pairwise.cpp  permutohedral.cpp
init/: note.txt
matlab/: readme.md
tools/: caffe.cpp  extract_features.cpp
(+180 files in other folders)
